--- a/README
+++ b/README
@@ -1,4 +1,16 @@
-These scripts assumed that You use Ubuntu, Apache, MySQL, Drush + Drush Make (or Drush5).
+
+new-drupal-site.sh allows developer to create a virtual host, mysql database and download Drupal core with modules which are defined in a default .make file. All of this with one command. Database creation is optional.
+
+Feel free to fork and add other modules and configuration.
+
+Requirements:  Ubuntu, Apache, MySQL, Drush + Drush Make (or Drush5).
 
 drush folder containing drush makefiles
 install-profile folder containig -  yes, it's suprising -  my custom install profile with default configuration
+
+Sites installation is  actually carried out by the browser.
+
+To do:
++ add some install profiles,
++ add option to translation of Drupal core  in a few popular language,
++ add option to create  git repository.
